fix stuff after refactoring
