# backend/docs/swagger.json
@@ -7,54 +7,8 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/v1/accounts/:id": {
-            "get": {
-                "description": "get account",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "account"
-                ],
-                "summary": "getAccount",
-                "operationId": "get-account",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/account.GetAccountDTO"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/e.ErrorResponse"
-                        }
-                    },
-                    "default": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/e.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/accounts/login": {
             "post": {
                 "description": "login",
@@ -76,7 +30,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/account.LoginAccountDTO"
+                            "$ref": "#/definitions/dto.LoginAccountDTO"
                         }
                     }
                 ],
@@ -84,7 +38,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/account.WithTokenDTO"
+                            "$ref": "#/definitions/dto.WithTokenDTO"
                         }
                     },
                     "500": {
@@ -123,7 +77,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/account.RegisterAccountDTO"
+                            "$ref": "#/definitions/dto.RegisterAccountDTO"
                         }
                     }
                 ],
@@ -132,6 +86,56 @@
                         "description": "Created",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/e.ErrorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/e.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/accounts/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "getAccount",
+                "operationId": "get-account",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GetAccountDTO"
                         }
                     },
                     "500": {
@@ -179,7 +183,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/note.GetAllNotesDTO"
+                            "$ref": "#/definitions/dto.GetAllNotesDTO"
                         }
                     },
                     "400": {
@@ -232,7 +236,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/note.CreateNoteDTO"
+                            "$ref": "#/definitions/dto.CreateNoteDTO"
                         }
                     }
                 ],
@@ -287,7 +291,7 @@
                 "tags": [
                     "notes"
                 ],
-                "summary": "Get Note By Id",
+                "summary": "Get Note By id",
                 "operationId": "get-note-by-id",
                 "parameters": [
                     {
@@ -302,7 +306,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/note.Note"
+                            "$ref": "#/definitions/model.Note"
                         }
                     },
                     "500": {
@@ -396,7 +400,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/note.UpdateNoteDTO"
+                            "$ref": "#/definitions/dto.UpdateNoteDTO"
                         }
                     }
                 ],
@@ -450,7 +454,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/tag.GetAllTagsDTO"
+                            "$ref": "#/definitions/dto.GetAllTagsDTO"
                         }
                     },
                     "400": {
@@ -510,7 +514,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/tag.CreateTagDTO"
+                            "$ref": "#/definitions/dto.CreateTagDTO"
                         }
                     }
                 ],
@@ -570,7 +574,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/tag.GetAllTagsDTO"
+                            "$ref": "#/definitions/dto.GetAllTagsDTO"
                         }
                     },
                     "400": {
@@ -631,7 +635,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/tag.Tag"
+                            "$ref": "#/definitions/model.Tag"
                         }
                     },
                     "400": {
@@ -750,7 +754,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/tag.UpdateTagDTO"
+                            "$ref": "#/definitions/dto.UpdateTagDTO"
                         }
                     }
                 ],
@@ -785,7 +789,7 @@
                 }
             }
         },
-        "/api/v1/tags/{id}/tags/{tag_id}": {
+        "/api/v1/tags/{note_id}/tags/{tag_id}": {
             "delete": {
                 "security": [
                     {
@@ -855,7 +859,40 @@
         }
     },
     "definitions": {
-        "account.GetAccountDTO": {
+        "dto.CreateNoteDTO": {
+            "type": "object",
+            "required": [
+                "color",
+                "header"
+            ],
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "color": {
+                    "type": "string"
+                },
+                "header": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.CreateTagDTO": {
+            "type": "object",
+            "required": [
+                "color",
+                "name"
+            ],
+            "properties": {
+                "color": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.GetAccountDTO": {
             "type": "object",
             "properties": {
                 "email": {
@@ -869,7 +906,29 @@
                 }
             }
         },
-        "account.LoginAccountDTO": {
+        "dto.GetAllNotesDTO": {
+            "type": "object",
+            "properties": {
+                "notes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Note"
+                    }
+                }
+            }
+        },
+        "dto.GetAllTagsDTO": {
+            "type": "object",
+            "properties": {
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Tag"
+                    }
+                }
+            }
+        },
+        "dto.LoginAccountDTO": {
             "type": "object",
             "properties": {
                 "password": {
@@ -880,7 +939,7 @@
                 }
             }
         },
-        "account.RegisterAccountDTO": {
+        "dto.RegisterAccountDTO": {
             "type": "object",
             "properties": {
                 "email": {
@@ -897,7 +956,35 @@
                 }
             }
         },
-        "account.WithTokenDTO": {
+        "dto.UpdateNoteDTO": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "color": {
+                    "type": "string"
+                },
+                "header": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.UpdateTagDTO": {
+            "type": "object",
+            "properties": {
+                "color": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.WithTokenDTO": {
             "type": "object",
             "properties": {
                 "email": {
@@ -927,36 +1014,7 @@
                 }
             }
         },
-        "note.CreateNoteDTO": {
-            "type": "object",
-            "required": [
-                "color",
-                "header"
-            ],
-            "properties": {
-                "body": {
-                    "type": "string"
-                },
-                "color": {
-                    "type": "string"
-                },
-                "header": {
-                    "type": "string"
-                }
-            }
-        },
-        "note.GetAllNotesDTO": {
-            "type": "object",
-            "properties": {
-                "notes": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/note.Note"
-                    }
-                }
-            }
-        },
-        "note.Note": {
+        "model.Note": {
             "type": "object",
             "properties": {
                 "body": {
@@ -981,55 +1039,12 @@
                     "description": "[]tag.Tag",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/tag.Tag"
+                        "$ref": "#/definitions/model.Tag"
                     }
                 }
             }
         },
-        "note.UpdateNoteDTO": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "type": "string"
-                },
-                "color": {
-                    "type": "string"
-                },
-                "header": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "tag.CreateTagDTO": {
-            "type": "object",
-            "required": [
-                "color",
-                "name"
-            ],
-            "properties": {
-                "color": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "tag.GetAllTagsDTO": {
-            "type": "object",
-            "properties": {
-                "tags": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/tag.Tag"
-                    }
-                }
-            }
-        },
-        "tag.Tag": {
+        "model.Tag": {
             "type": "object",
             "required": [
                 "color",
@@ -1041,17 +1056,6 @@
                 },
                 "id": {
                     "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "tag.UpdateTagDTO": {
-            "type": "object",
-            "properties": {
-                "color": {
-                    "type": "string"
                 },
                 "name": {
                     "type": "string"
